--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@chakra-ui/react": "^1.6.8",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@fontsource/montserrat": "^4.5.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^4.1.17",
     "gatsby": "^2.31.1",
