--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^4.1.17",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.10.0",
+    "gatsby-plugin-google-gtag": "^4.1.0",
     "gatsby-plugin-manifest": "^2.11.0",
     "gatsby-plugin-offline": "^3.9.0",
     "gatsby-plugin-react-helmet": "^3.9.0",
