--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fontsource/montserrat": "^4.5.1",
+    "axios": "^0.27.2",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^4.1.17",
     "gatsby": "^2.31.1",
